fix z-index of range

--- a/css/catalog.css
+++ b/css/catalog.css
@@ -1140,16 +1140,16 @@ input::-webkit-calendar-picker-indicator {
   margin-bottom: 1.8rem;
 }
 
-.wrap .aside-nav .aside-menu > input[type="checkbox"]:checked + label {
+.wrap .aside-nav .aside-menu > input[type='checkbox']:checked + label {
   color: #f16d7f;
 }
 
-.wrap .aside-nav .aside-menu > input[type="checkbox"]:checked + label::after {
-  content: "\f0d8";
+.wrap .aside-nav .aside-menu > input[type='checkbox']:checked + label::after {
+  content: '\f0d8';
   color: #f16d7f;
 }
 
-.wrap .aside-nav .aside-menu > input[type="checkbox"]:checked ~ .aside-menu__drop-menu {
+.wrap .aside-nav .aside-menu > input[type='checkbox']:checked ~ .aside-menu__drop-menu {
   height: 46rem;
 }
 
@@ -1171,8 +1171,8 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .wrap .aside-nav .aside-menu__heading::after {
-  content: "\f0d7";
-  font-family: "Font Awesome 5 Free";
+  content: '\f0d7';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   position: absolute;
   right: 0.6rem;
@@ -1281,7 +1281,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .wrap .main .catalog-form__trending-label:not(:last-child)::after {
-  content: "|";
+  content: '|';
   color: #dfdfdf;
   margin: 0 1.2rem;
 }
@@ -1313,7 +1313,7 @@ input::-webkit-calendar-picker-indicator {
 
 .wrap .main .catalog-form__size-label {
   color: #6f6e6e;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 1.4rem;
   font-weight: 400;
   text-transform: uppercase;
@@ -1347,8 +1347,8 @@ input::-webkit-calendar-picker-indicator {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: "FontAwesome";
-  content: "\f00c";
+  font-family: 'FontAwesome';
+  content: '\f00c';
   font-size: 1rem;
   color: transparent;
   background: #fff;
@@ -1559,14 +1559,14 @@ input::-webkit-calendar-picker-indicator {
 
 .wrap .main .catalog-form__output-min {
   color: #6f6e6e;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 1.4rem;
   font-weight: 400;
 }
 
 .wrap .main .catalog-form__output-max {
   color: #6f6e6e;
-  font-family: "Open Sans";
+  font-family: 'Open Sans';
   font-size: 1.4rem;
   font-weight: 400;
 }
@@ -1640,8 +1640,8 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .wrap .main .catalog-form__sort-value::after {
-  content: "\f0d7";
-  font-family: "Font Awesome 5 Free";
+  content: '\f0d7';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   position: absolute;
   right: 0.6rem;
@@ -1738,8 +1738,8 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .wrap .main .catalog-form__show-value::after {
-  content: "\f0d7";
-  font-family: "Font Awesome 5 Free";
+  content: '\f0d7';
+  font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   position: absolute;
   right: 0.6rem;
@@ -1981,7 +1981,7 @@ input::-webkit-calendar-picker-indicator {
 }
 
 .wrap .main .catalog-pagination__list-item:nth-of-type(7)::after {
-  content: ".....";
+  content: '.....';
   color: #c4c4c4;
   font-size: 1.6rem;
   margin-left: -0.2rem;
